--- a/vn_ent_qubits10.ipynb
+++ b/vn_ent_qubits10.ipynb
@@ -97,6 +97,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient計算"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -199,7 +206,14 @@
     "        print(f'complete time: {end - start}, trial: {idx}, qubits: {qubits}, layers: {n_layer}')\n",
     "    save_file_path = f'/home/mitsukism/qiskit_entropy/vn_net_gradients_bp/gradients/gradients_qubits{qubits}_layer{n_layer}.npy'\n",
     "    np.save(save_file_path, gradients_all_trials)\n",
-    "    print(\"complete "
+    "    print(\"complete collecting samples of gradients, save data to \", save_file_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 学習"
    ]
   },
   {
