--- a/vn_ent_qubits8.ipynb
+++ b/vn_ent_qubits8.ipynb
@@ -304,6 +304,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradientの計算"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2179,6 +2186,13 @@
     "save_file_path = '/home/mitsukism/qiskit_entropy/vn_net_gradients_bp/qubits8/gradients_all_trials.npy'\n",
     "np.save(save_file_path, gradients_all_trials)\n",
     "print(f'All gradients saved in: {save_file_path}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 学習"
    ]
   },
   {
